cabal-version: 3.6

-- Created : 18 October 2022

name:
  vector-sorting-benchmarks
version:
  0.1
synopsis:
  TODO
description:
  TODO
license:
  Apache-2.0
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

-- build-type: Custom
--
-- custom-setup
--   setup-depends:
--     , base ^>= 4.9
--     , Cabal ^>= 1.16

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  -- if impl(ghc >= 8.10)
  --   ghc-options:
  --     -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: ghc-options
  exposed-modules:
    ForeignSorting
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.9

  include-dirs:
    cbits
  c-sources:
    cbits/sort.c
  cxx-sources:
    cbits/sort_cplusplus.cpp
  cxx-options: -std=c++17
  -- if impl(ghc >= 9.4)
  --   build-depends: system-cxx-std-lib == 1.0
  if os(linux)
    extra-libraries: stdc++

executable vector-sorting-benchmarks
  import: ghc-options
  main-is:
    bench/VectorSorting.hs
  hs-source-dirs:
    .
  build-depends:
    , base >= 4.9
    , deepseq
    , mtl
    , primitive
    , random
    , tasty
    , tasty-bench
    , tasty-quickcheck
    , text
    , vector
    , vector-algorithms
    , vector-sorting-benchmarks
  ghc-options:
    -rtsopts
--     -threaded
--     "-with-rts-opts=-N -A32M"
    -main-is VectorSorting

